Sun Apr 12 19:29:52 1998  George Lebl  <jirka@5z.com>

	* gnome-calculator.[ch]: killed a few bugs, seems to
	  kind of work now

Sun Apr 12 17:24:39 1998  George Lebl  <jirka@5z.com>

	* gnome-calculator.[ch]: added the beginnings of a
	  double precision calculator widget modeled after
	  xcalc

	* libgnomeui.h, Makefile.am: added gnome-calculator
	  references

Sat Apr 11 14:20:26 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-appsmenu.h, gnome-appsmenu.c: Began implementing
	load and menu creation functions. .directory support.
	* gnome-appsmenu.h (gtk_menu_item_new_from_apps_menu): New
	function.

Sat Apr 11 11:35:24 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-appsmenu.h, gnome-appsmenu.c 
	(gnome_apps_menu_load_system, gnome_apps_menu_load_default):
	Two new functions.
	(GnomeAppsMenuVariety): moved from .h to .c
	(gnome_apps_menu_variety_new): also moved
	
1998-04-10  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gnome-app-helper.h (GnomeUIInfoType): New type, extracted from
 	GnomeUIInfo, to make access to this type easier when using C++.
	(GnomeUIPixmapType): likewise
	(GnomeUIInfo): Use GnomeUIInfoType and GnomeUIPixmapType.
	(GNOMEUIINFO_END): Use expicit type casts to GnomeUIPixmapType and
 	GdkModifierType to prevent C++ from generating compiler warnings.
	(GNOMEUIINFO_SEPARATOR): likewise
	(GNOMEUIINFO_ITEM): likewise
	(GNOMEUIINFO_ITEM_DATA): likewise
	(GNOMEUIINFO_TOGGLEITEM): likewise
	(GNOMEUIINFO_TOGGLEITEM_DATA): likewise
	(GNOMEUIINFO_HELP): likewise
	(GNOMEUIINFO_RADIOLIST): likewise
	(GNOMEUIINFO_RADIOITEM): likewise
	(GNOMEUIINFO_RADIOITEM_DATA): likewise

Fri Apr 10 00:14:03 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-appsmenu.h (gnome_apps_menu_variety_new): 
	New function.
	* gnome-appsmenu.c: Continued implementation. Variety
	registration is done, load and GtkMenu creation isn't.

Thu Apr  9 23:25:29 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-appsmenu.h: Added basic menu-manipulation functions.