@@ -9,3 +9,4 @@ gnome_segv
 so_locations
 stock_demo
 ted_demo
+.exrc
