@@ -1,0 +1,59 @@
+/* XPM */
+static char * calculator_font_xpm[] = {
+"300 30 26 1",
+" 	c None",
+".	c #000000",
+"+	c #8D8D8D",
+"@	c #AAAAAA",
+"#	c #717171",
+"$	c #555555",
+"%	c #383838",
+"&	c #C6C6C6",
+"*	c #FFFFFF",
+"=	c #E2E2E2",
+"-	c #1C1C1C",
+";	c #030303",
+">	c #050505",
+",	c #040404",
+"'	c #020202",
+")	c #0A0A0A",
+"!	c #090909",
+"~	c #060606",
+"{	c #242424",
+"]	c #181818",
+"^	c #AFAFAF",
+"/	c #9D9D9D",
+"(	c #A2A2A2",
+"_	c #010101",
+":	c #0B0B0B",
+"<	c #070707",
+"............................................................................................................................................................................................................................................................................................................",
+"............................................................................................................................................................................................................................................................................................................",
+"............................................................................................................................................................................................................................................................................................................",
+".....+@@@@@@@@@@@@#.........$@@@@@%..........+@@@@@@@@@@@@#...%@@@@@@@@@@@+.................$@@@@#....%@@@@@@@@@@@@@@@#......$@@@@@@@@@@......%@@@@@@@@@@@@@@@#......+@@@@@@@@@@@@#......$@@@@@@@@@@@@#..................................................................&***$...&***%......................",
+"....@*************@........$******$.........@*************@...$************@...............$*****@....$***************@.....$***********......$***************@.....@*************@.....@*************@..................................................................@***#..$**=@.......................",
+"...@**************@.......$*******$........@**************@...$*************@.............$******@....$***************@....$************......$***************@....@**************@....@**************@...................................................................***@..=**@........................",
+"..$*****.....@****@.......@*******$.......$**$.......@****@............-=****+...........$*******@....$*****..............%*****.........................@****@...$*****.....@****@...$*****.....@****@..................................................................$*+*@.#*@*$........................",
+"..$*****.....@****@.......@*******$.......$**$.......@****@.............@****@..........$********@....$*****..............$*****.........................@****@...$*****.....@****@...$*****.....@****@..................................................................+*$**.=++*$........................",
+"..$*****.....@****@.......#@@*****$.......%@@%.......@****@.............@****@.........$***@@****@....$*****..............$*****.........................@****@...$*****.....@****@...$*****.....@****@..............................$$%.................................&*.@*+*-@*.........................",
+"..$*****.....@****@..........*****$..................@****@.............@****@........$***@.@****@....$*****..............$*****.........................@****@...$*****.....@****@...$*****.....@****@..............................**@.................................*@.@**+.**.........................",
+"..$*****.....@****@..........*****$..................@****@.............&****@.......$***@..@****@....$*****..............$*****.........................@****@...$*****.....@****@...$*****.....@****@..............................**@................................$*#.$**--*@.........................",
+"..$*****.....@****@..........*****$..................@****@......#@@@@@&****=-......$***@...@****@....$*****@@@@@@@@@@#...$*****@@@@@@@@@@#..............@****@...$*****.....@****+...$*****.....@****@..............................**@................................+*%.%@#.$*+.........................",
+"..$*****.....@****@..........*****$.................-=****@......@**********-......$***@....@****@....$***************@...$***************@.............$****=-...$*****.....@***@....$*****.....@****@..............................**@................................&*......+*$.........................",
+"..$*****.....@****@..........*****$................-=*****$......@**********@.....$***@.....@****@....$***************@...$***************@............$****=-....$*****.....@**@.....$*****.....@****@..............................**@...............................****=..@****$............$@@@+%......",
+"..$*****.....@****@..........*****$...............-=*****$.............-=****+...%****......@****@...............@****@...$*****.....@****@...........$****=-........@************@...$*****.....@****@........................$*************......$*************......@@@@#..@@@@@-..........+*******&-....",
+"..$*****.....@****@..........*****$..............-=*****$...............@****@...$****......@****@...............@****@...$*****.....@****@..........$****=-........@*************@...$*****.....@****@........................$*************......$*************...........................-=***=$#=**=-...",
+"..$*****.....@****@..........*****$.............-=*****$................@****@...$****$$$$$$&****&$$-............@****@...$*****.....@****@.........$****=-........@****@@@@@=****@...$*****$$$$$&****@........................%@@@@@**=@@@@@......%@@@@@@@@@@@@@...........................&****-..%***&...",
+"..$*****.....@****@..........*****$............-=*****$.................@****@...$******************$............@****@...$*****.....@****@.........*****$........$*****.....@****@...$***************@..............................**@...................................................#****&....****-..",
+"..$*****.....@****@..........*****$...........-=*****$..................@****@...$******************$............@****@...$*****.....@****@.........*****$........$*****.....@****@...$***************@..............................**@...................................................@****&$$$$****#..",
+"..$*****.....@****@..........*****$..........-=*****$...................@****@...-$$$$$$$$$$&****&$$-............@****@...$*****.....@****@.........*****$........$*****.....@****@...-$$$$$$$$$$&****@..............................**@...................................................**************@..",
+"..$*****.....@****@..........*****$.........-=*****$....................@****@..............@****@...............@****@...$*****.....@****@.........*****$........$*****.....@****@..............@****@..............................**@...................................................*****=@@@@@@@@#..",
+"..$*****.....@****@..........*****$........-=*****$.....................@****@..............@****@...............@****@...$*****.....@****@.........*****$........$*****.....@****@..............@****@..............................**@...................................................*****@...........",
+"..$*****.....@****@..........*****$.......-=*****$......................@****@..............@****@...............@****@...$*****.....@****@.........*****$........$*****.....@****@..............@****@....................................................................................&****@......-....",
+"..$*****.....@****@..........*****$.......$*****$.......................@****@..............@****@...............@****@...$*****.....@****@.........*****$........$*****.....@****@..............@****@........$*****......................................................................#*****.....-==#..",
+"..$*****$$$$$&****@..........*****$.......$*****$$$$$$$$$$%....-$$$$$$$$&****$..............@****@.....-$$$$$$$$$&****+...$*****$$$$$&****+.........*****$........$*****$$$$$&****+......%$$$$$$$&****@........$*****.......................................................................=****@...-=**%..",
+"..$**************=-..........*****$.......$***************@....$************$...............@****@.....$*************@....$**************@..........*****$........$**************@.......@************@........$*****.......................................................................-=****=@@***$...",
+"..$*************@-...........*****$.......$***************@....$***********$................@****@.....$************@.....$*************@...........*****$........$*************@........@************@........$*****........................................................................-&*******=%....",
+"..-$$$$$$$$$$$$$.............$$$$$-.......-$$$$$$$$$$$$$$$%....-$$$$$$$$$$%.................%$$$$%.....-$$$$$$$$$$$$......-$$$$$$$$$$$$$............$$$$$-........-$$$$$$$$$$$$$.........%$$$$$$$$$$$$%........$*****..........................................................................-$@@@+%......",
+"...............................................................................................................................................................................................................-$$$$$.......................................................................................",
+"............................................................................................................................................................................................................................................................................................................"};
