@@ -1,3 +1,12 @@
+Sun Apr 12 23:01:24 1998  George Lebl  <jirka@5z.com>
+
+	* gnome-calculator.[ch]: now has pretty font display,
+	  reduced the number of digits to 12 and added
+	  memory functions.
+
+	* pixmaps/calculator-font.xpm: the font for the
+	  calculator display
+
 Sun Apr 12 19:29:52 1998  George Lebl  <jirka@5z.com>
 
 	* gnome-calculator.[ch]: killed a few bugs, seems to
